added all the pages in the navigation bar

--- a/BBC/index.html
+++ b/BBC/index.html
@@ -13,15 +13,15 @@
                 <img src="#" alt="BBC logo" />
                 <img src="#" alt="sign in button" />
                 <ol>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Sport</a></li>
-                    <li><a href="#">Reel</a></li>
-                    <li><a href="#">Worklife</a></li>
-                    <li><a href="#">Travel</a></li>
-                    <li><a href="#">Future</a></li>
-                    <li><a href="#">Culture</a></li>
-                    <li><a href="#">More</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="sports.html">Sport</a></li>
+                    <li><a href="reel.html">Reel</a></li>
+                    <li><a href="worklife.html">Worklife</a></li>
+                    <li><a href="travel.html">Travel</a></li>
+                    <li><a href="future.html">Future</a></li>
+                    <li><a href="culture.html">Culture</a></li>
+                    <li><a href="more.html">More</a></li>
                 </ol>
                 <form>
                     <label for="search">Search</label>
@@ -47,7 +47,7 @@
                 <span>CANADA</span>
             </section>
             <section>
-                <img src="scientist holding vial">
+                <img src="#" alt="Scientist holding a vial">
                 <h2>How will the world vaccinate seven billion people?</h2>
                 <span>HEALTH</span>
             </section>
