revamped BBC page HTML

--- a/BBC/travel.html
+++ b/BBC/travel.html
@@ -10,25 +10,29 @@
 <body>
     <header>
         <nav>
-            <img src="#" alt="BBC logo" />
-            <img src="#" alt="sign in button" />
-            <ol>
+            <img class="logo" src="#" alt="BBC logo">
+            <ul class="sign-in">
+                <li><a href="#">Sign in</a></li>
+            </ul>
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="news.html">News</a></li>
-                <li><a href="sports.html">Sport</a></li>
-                <li><a href="reel.html">Reel</a></li>
+                <li><a href="sports.html">Sports</a></li>
+                <li><a href="reel.html">Reels</a></li>
                 <li><a href="worklife.html">Worklife</a></li>
                 <li><a href="travel.html">Travel</a></li>
                 <li><a href="future.html">Future</a></li>
                 <li><a href="culture.html">Culture</a></li>
                 <li><a href="more.html">More</a></li>
-            </ol>
+            </ul>
             <form>
-                <label for="search">Search</label>
-                <input id="search" type="text">
-            </form>                   
+                <label for="find"></label>
+                <input type="search" name="find" id="find" placeholder="Search">
+            </form>
         </nav>
     </header>
+
     <h1>Travel</h1>
+
 </body>
 </html>
