--- a/BBC/index.html
+++ b/BBC/index.html
@@ -8,81 +8,90 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
+        <!-- Header -->
         <header>
             <nav>
-                <img src="#" alt="BBC logo" />
-                <img src="#" alt="sign in button" />
-                <ol>
+                <img class="logo" src="#" alt="BBC logo">
+                <ul class="sign-in">
+                    <li><a href="#">Sign in</a></li>
+                </ul>
+                <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="news.html">News</a></li>
-                    <li><a href="sports.html">Sport</a></li>
-                    <li><a href="reel.html">Reel</a></li>
+                    <li><a href="sports.html">Sports</a></li>
+                    <li><a href="reel.html">Reels</a></li>
                     <li><a href="worklife.html">Worklife</a></li>
                     <li><a href="travel.html">Travel</a></li>
                     <li><a href="future.html">Future</a></li>
                     <li><a href="culture.html">Culture</a></li>
                     <li><a href="more.html">More</a></li>
-                </ol>
+                </ul>
                 <form>
-                    <label for="search">Search</label>
-                    <input id="search" type="text">
-                </form>                   
+                    <label for="find"></label>
+                    <input type="search" name="find" id="find" placeholder="Search">
+                </form>
             </nav>
         </header>
-        
-        <section>
-            <section>
-                <header>
-                    <h2>Welcome to BBC.com</h2>
-                    <span>Thursday, 13 August</span>
-                </header>
-                <img src="#" alt="Isreal and UAE leader">
-                <h1>Israel and UAE strike historic peace deal</h1>
-                <p>Isreal and the UAE agree to normalise relations, marking the third Isreal-Arab peace deal.</p>
-                <span>MIDDLE EAST</span>
-            </section>
-            <section>
-                <img src="#" alt="the USA and Canada flags">
-                <h2>Americans, go home: Tension at Canada-US border</h2>
-                <span>CANADA</span>
-            </section>
-            <section>
-                <img src="#" alt="Scientist holding a vial">
-                <h2>How will the world vaccinate seven billion people?</h2>
-                <span>HEALTH</span>
-            </section>
-            <section>
-                <img src="#" alt="person at computer">
-                <h2>The online 'productivity gyms'</h2>
-                <span>WORKLIFE</span>
-            </section>
-            <section>
-                <img src="#" alt="folk singer">
-                <h2>The folk singer murdered for his music</h2>
-                <span>CULTURE</span>
-            </section>
 
+        <!-- Main Content -->
+        <!-- Lead -->
+        <h2>Welcome to BBC</h1>
+        <span>Thursday, 13 August</span>
+
+        <!-- Top Article -->
+        <section class="top-article">
+            <img src="#" alt="Isreal and UAE leaders">
+            <h1>Isreal and UAE strike historic peace deal</h1>
+            <p>Isreal and the UAE agree to normalise relations, marking the third Israel-Arab peace deal.</p>
+            <span class="subject">Middle East</span>
+        </section>
+
+        <!-- Next Important Articles-->
+        <section class="next-article-group">
             <section>
-                <h3>News</h3>
-                <section>
-                    <img src="#" alt="President Biden and Vice President Harris">
-                    <h3>Biden and Harris say Trump has left US 'in tatters'</h3>
-                    <p>Joe Biden and running make Kamala Harris call President Donald Trump a "whining" incompetent leader.</p>
-                    <span>US ELECTION 2020</span>
-                </section>
-                <section>
-                    <img src="#" alt="Women">
-                    <h3>Women form 'solidarity chains' in Belarus protests</h3>
-                    <p>Women take to the streets of Minsk dressed in white as they demand an end to police brutality.</p>
-                    <span>EUROPE</span>
-                </section>
-                <section>
-                    <img src="#" alt="Donald trump">
-                    <h3>Trump says low-pressure shower heads won't wash</h3>
-                    <p>The US calls for rules to be eased after Donald Trump complained of issues washing his hair.</p>
-                    <span>US & CANADA</span>
-                </section>
+                <img src="#" alt="American and Canada Flag">
+                <h3>Americans, go home: Tension at Canada-US border</h3>
+                <span class="subject">Canada</span>
             </section>
-    </section>
+            <section>
+                <img src="#" alt="Nurse holding vial">
+                <h3>How will the world vaccinate seven billion people?</h3>
+                <span class="subject">Health</span>
+            </section>
+            <section>
+                <img src="#" alt="Computer user">
+                <h3>The online 'productivity gyms</h3>
+                <span>Worklife</span>
+            </section>
+            <section>
+                <img src="#" alt="Folk singer">
+                <h3>The folk singer murdered for his music</h3>
+                <span>Culture</span>
+            </section>
+        </section>
+
+        <!-- News Articles -->
+        <h2>News</h2>
+        <section class="news-section">
+            <section>
+                <img src="#" alt="Kamala Harris and Biden">
+                <h3>Biden and Harris say Trump has left US 'in tatters'</h3>
+                <p>Joe Biden and running mate Kamala Harris call President Donald Trump a "whining" incompetent leader.</p>
+                <span class="subject">US Election 2020</span>
+            </section>
+            <section>
+                <img src="#" alt="Women protesting">
+                <h3>Women form 'solidarity chains' in Belarus protests</h3>
+                <p>Women take to the streets of Minsk dressed in white as they demand an end to police brutality.</p>
+                <span class="subject">Europe</span>
+            </section>
+            <section>
+                <img src="#" alt="Donald Trump">
+                <h3>Trump says low-pressure shower heads won't wash</h3>
+                <p>The US calls for rules to be eased after Donald Trump complained of issues washing his hair.</p>
+                <span class="subject">US & Canada</span>
+            </section>
+        </section>
+
     </body>
 </html>
