--- a/layout1/index.html
+++ b/layout1/index.html
@@ -7,24 +7,15 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <header>
-    </header>
+    <header></header>
 
-    <div>
-    </div>
-    <div>
-    </div>
-    <div>
-    </div>
+    <div></div>
+    <div></div>
+    <div></div>
 
-    <section>
-    </section>
-    <section>
-    </section>
+    <section></section>
+    <section></section>
 
-    <footer>
-    </footer>
-
-    
+    <footer></footer>
 </body>
 </html>
